--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
     "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 
-  background-color: #c1e9fc;
+  --ion-background-color: #e9f8ff;
 
   --ion-color-primary: #6acde6;
   --ion-color-primary-rgb: 106, 205, 230;
