chore: 디자인 일부 수정
배경 제거, 안내문 내용 변경

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
     "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 
-  --ion-background-color: #e9f8ff;
+  --ion-background-color: #ffffff;
 
   --ion-color-primary: #6acde6;
   --ion-color-primary-rgb: 106, 205, 230;
