design: #7 primary color 변경

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
 
   --ion-background-color: #ffffff;
 
-  --ion-color-primary: #6acde6;
+  --ion-color-primary: #8fb5ff;
   --ion-color-primary-rgb: 106, 205, 230;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
